# Autoware

./: .gitattributes  .gitignore  chaper2_1.md
autoware.gf2/: README.md
autoware.gf2/autoware-1.14/src/autoware/core_planning/freespace_planner/: CMakeLists.txt  package.xml
autoware.gf2/autoware-1.14/src/autoware/core_planning/freespace_planner/include/freespace_planner/: astar_navi.h  path_interpolation.h
autoware.gf2/autoware-1.14/src/autoware/core_planning/freespace_planner/launch/: astar_navi.launch
autoware.gf2/autoware-1.14/src/autoware/core_planning/freespace_planner/src/astar_navi/: astar_navi.cpp  path_interpolation.cpp
autoware.gf2/autoware-1.14/src/autoware/core_planning/freespace_planner/visualization/: geneate_code.sh  visualization.grpc.pb.cc  visualization.grpc.pb.h  visualization.pb.cc  visualization.pb.h  visualization.proto  visualization_sender.cc  visualization_sender.h
autoware.gf2/autoware-1.14/src/autoware/core_planning/op_global_planner/: CMakeLists.txt  package.xml
autoware.gf2/autoware-1.14/src/autoware/core_planning/op_global_planner/include/: op_global_planner_core.h  roadedge_analyse_core.h  rs.h
autoware.gf2/autoware-1.14/src/autoware/core_planning/op_global_planner/launch/: op_global_planner.launch
autoware.gf2/autoware-1.14/src/autoware/core_planning/op_global_planner/nodes/: op_global_planner_core.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/astar_global_path_presolve/: CMakeLists.txt  package.xml
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/astar_global_path_presolve/include/astar_global_path_presolve/: pathPreSolve_core.h
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/astar_global_path_presolve/launch/: pathPreSolve.launch
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/astar_global_path_presolve/lib/: pathPreSolve_core.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/astar_global_path_presolve/src/: pathPreSolve.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/rm_custom_area/: CMakeLists.txt  package.xml
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/rm_custom_area/include/rm_custom_area/: rm_custom_area_core.h
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/rm_custom_area/launch/: rm_custom_area.launch
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/rm_custom_area/lib/: rm_custom_area_core.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/rm_custom_area/src/: rm_custom_area.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/roadedge_analyse/: CMakeLists.txt  package.xml
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/roadedge_analyse/include/roadedge_analyse/: roadedge_analyse_core.h  rs.h
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/roadedge_analyse/launch/: roadedge_analyse.launch
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/roadedge_analyse/lib/: roadedge_analyse_core.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/roadedge_analyse/msg/: LaneType.msg
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/roadedge_analyse/src/: roadedge_analyse.cpp  rs.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/scenario_manager/: CMakeLists.txt  package.xml
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/scenario_manager/include/scenario_manager/: scenario_manager_core.h
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/scenario_manager/launch/: scenario_manager.launch
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/scenario_manager/lib/: scenario_manager_core.cpp
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/scenario_manager/scripts/: pub_goal_sim.py  pub_goals.py
autoware.gf2/autoware-1.14/src/autoware/pix_utilities/scenario_manager/src/: scenario_manager.cpp
autoware.gf2/catkin_ws/ros_driver/: record_rosbag.launch
autoware.gf2/catkin_ws/ros_driver/app_ws/src/sub_pub/: CMakeLists.txt  package.xml
autoware.gf2/catkin_ws/ros_driver/app_ws/src/sub_pub/include/: main.h
autoware.gf2/catkin_ws/ros_driver/app_ws/src/sub_pub/launch/: sjtu_app.launch
autoware.gf2/catkin_ws/ros_driver/app_ws/src/sub_pub/src/: main.cpp
autoware.gf2/catkin_ws/ros_driver/catkin_ws_control/src/raw_vehicle_cmd_converter-master/: CHANGELOG  CMakeLists.txt  package.xml
autoware.gf2/catkin_ws/ros_driver/catkin_ws_control/src/raw_vehicle_cmd_converter-master/data/: accel_map.csv  brake_map.csv
autoware.gf2/catkin_ws/ros_driver/catkin_ws_control/src/raw_vehicle_cmd_converter-master/data/pix/: accel_map.csv  brake_map.csv
autoware.gf2/catkin_ws/ros_driver/catkin_ws_control/src/raw_vehicle_cmd_converter-master/include/raw_vehicle_cmd_converter/: accel_map.h  brake_map.h  csv_loader.h  interpolate.h  node.hpp
autoware.gf2/catkin_ws/ros_driver/catkin_ws_control/src/raw_vehicle_cmd_converter-master/launch/: raw_vehicle_converter.launch
autoware.gf2/catkin_ws/ros_driver/catkin_ws_control/src/raw_vehicle_cmd_converter-master/src/: accel_map.cpp  brake_map.cpp  csv_loader.cpp  interpolate.cpp  main.cpp  node.cpp  test.cpp
autoware.gf2/catkin_ws/ros_driver/catkin_ws_sensor/src/ars408_ros-master/: CMakeLists.txt  README.md  package.xml
autoware.gf2/catkin_ws/ros_driver/catkin_ws_sensor/src/ars408_ros-master/include/ars408_ros/: ars408_commands.h  ars408_parser.h  ars408_ros_node.h
autoware.gf2/catkin_ws/ros_driver/catkin_ws_sensor/src/ars408_ros-master/launch/: ars408_setup_kvaser.launch  ars408_setup_socketcan.launch  ars408_status.launch  continental_ars408.launch  multi_device_throttle.launch
autoware.gf2/catkin_ws/ros_driver/catkin_ws_sensor/src/ars408_ros-master/src/: ars408_driver.cpp  ars408_radar_status.cpp  ars408_ros_node.cpp
autoware.gf2/catkin_ws/ros_planning/: 部署rviz_plugin方法.md
autoware.gf2/docs/: git.md  readme.md
autoware.gf2/docs/gitflow/: gitflow.md
autoware.gf2/docs/ros_driver/: build_ros_driver.md  nmea_sentence.md  test_ros_driver.md
autoware.gf2/scripts/: app_client.sh  control_node.sh  control_node_reverse.sh  pix_driver.sh
autoware.gf2/scripts/app/: clear.sh  driver.sh  normal.sh  pub_goal.sh  stop_driver.sh  stop_normal.sh
(+325 files in other folders)
